--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "bugsyth_engine"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/bugsyth/bugsyth_engine"
+license = "MIT OR Apache-2.0"
+description = "little engine using glium"
 
 [dependencies]
 glium = "0.36.0"
